# csv2ledger-rs

./: Cargo.toml
libs/rledger/: Cargo.toml
libs/rledger/src/: lib.rs
src/: lib.rs  main.rs  process.rs  swedbank.rs
