[package]
name = "csv2ledger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [
  "libs/*",
]

[dependencies]
chrono = { version = "0.4.22", features = ["serde"] }
csv = "1.1.6"
encoding_rs = "0.8.31"
env_logger = "0.9.0"
log = "0.4.17"
rust_decimal = "1.26.1"
serde = { version = "1.0.144", features = ["derive"] }
rledger = { path = "libs/rledger" }
